[workspace]
resolver = "2"
members = [
  "core",
]
exclude = [
  "examples/server-and-client/client",
  "examples/server-and-client/server",
  "examples/zstd-example",
  "examples/standalone-client",
]

[workspace.package]
version = "0.1.0"
authors = ["Robert Krahn <robert@hyper.video>"]
edition = "2021"
repository = "https://github.com/hypervideo/metrics-exporter-wasm"

[workspace.dependencies]
backoff = { version = "0.4.0", features = ["wasm-bindgen", "futures"] }
cfg-iif = "0.2.7"
futures = "0.3.31"
gloo = { version = "0.11.0", default-features = false, features = ["net"] }
metrics = { version = "0.24.1" }
metrics-exporter-wasm-core.path = "./core"
scopeguard = "1.2.0"
tokio = { version = "1.43.0", default-features = false, features = ["sync", "macros"] }
tokio-util = { version = "0.7.13", default-features = false, features = ["futures-util"] }
tracing = { version = "0.1.0", default-features = false, features = ["attributes"] }
wasm-bindgen = { version = "0.2.100", default-features = false }
wasm-bindgen-futures = "0.4.49"
wasmtimer = "0.4.1"
web-sys = { version = "0.3.76", features = ["AbortController"] }

[workspace.dependencies.asn1rs]
git = "https://github.com/hypervideo/asn1rs"
rev = "f101f1315ad80dd60d9d4aabfaf9e567467a2cac"
default-features = false
features = ["macros", "model"]

# -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
# root

[package]
name = "metrics-exporter-wasm"
version.workspace = true
authors.workspace = true
categories = ["development-tools::debugging"]
edition.workspace = true
keywords = ["metrics", "telemetry", "wasm"]
description = "A metrics-compatible exporter meant for browser WASM applications that outputs metrics over HTTP."

[dependencies]
backoff.workspace = true
cfg-iif.workspace = true
futures.workspace = true
gloo.workspace = true
metrics.workspace = true
metrics-exporter-wasm-core.workspace = true
scopeguard.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
wasm-bindgen-futures.workspace = true
wasmtimer.workspace = true
web-sys.workspace = true

[features]
default = []
asn-debug = ["metrics-exporter-wasm-core/asn-debug"]
compress-brotli = ["metrics-exporter-wasm-core/compress-brotli"]
compress-zstd = ["metrics-exporter-wasm-core/compress-zstd"]

[profile.release-with-debug]
inherits = "release"
debug = true
