[workspace]
resolver = "2"
members = [
  "core",
]
exclude = [
  "examples/server-and-client/client",
  "examples/server-and-client/server",
  "examples/zstd-example",
  "examples/standalone-client",
]

[workspace.package]
version = "0.2.1"
authors = ["Robert Krahn <robert@hyper.video>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/hypervideo/metrics-exporter-wasm"

[workspace.dependencies]
backon = { version = "1.5.0", default-features = true }
bytes = "1.10.1"
chrono = { version = "0.4.40", default-features = false, features = ["now"] }
futures = { version = "0.3.31", default-features = false }
gloo = { version = "0.11.0", default-features = false, features = ["net"] }
metrics = { version = "0.24.1" }
metrics-exporter-wasm-core = { path = "./core", version = "0.2.1" }
scopeguard = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.43.0", default-features = false, features = ["sync", "macros"] }
tokio-util = { version = "0.7.13", default-features = false, features = ["futures-util"] }
tracing = { version = "0.1.0", default-features = false, features = ["attributes"] }
utoipa = { version = "5.3.1", features = ["chrono"] }
wasm-bindgen = { version = "0.2.99", default-features = false }
wasm-bindgen-futures = "0.4.49"
wasmtimer = "0.4.1"
web-sys = { version = "0.3.76", features = ["AbortController"] }

[workspace.dependencies.asn1rs]
git = "https://github.com/hypervideo/asn1rs"
rev = "f101f1315ad80dd60d9d4aabfaf9e567467a2cac"
default-features = false
features = ["macros", "model"]

# -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-

[package]
name = "metrics-exporter-wasm"
version = "0.2.1"
authors.workspace = true
categories = ["development-tools::debugging"]
edition.workspace = true
keywords = ["metrics", "telemetry", "wasm"]
license.workspace = true
repository.workspace = true
description = "A metrics-compatible exporter meant for browser WASM applications that outputs metrics over HTTP."

[dependencies]
backon.workspace = true
brotli = { version = "7.0.0", optional = true }
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
gloo.workspace = true
metrics.workspace = true
metrics-exporter-wasm-core.workspace = true
scopeguard.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasmtimer.workspace = true
web-sys.features = ["console"]
web-sys.workspace = true

[features]
default = []
# Utilities to debug ASN.1. Only useful for development.
asn-debug = ["metrics-exporter-wasm-core/asn-debug"]
# Support for metrics compression with brotli. Uses the `brotli` crate.
compress-brotli = ["dep:brotli"]
# Support for metrics compression with zstd. This requires to have an externally installed function `fn zstd_compress(buf: Uint8Array, level: u32) -> Uint8Array;` # available! Use e.g. https://www.npmjs.com/package/@bokuweb/zstd-wasm
compress-zstd-external = []
# Rebuild zstd-wasm from source.
compress-zstd-external-from-source = []
# Adds serde::Serialize and serde::Deserialize to all types
serde = ["metrics-exporter-wasm-core/serde"]
# Adds utoipa::ToSchema to all types
utoipa-schema = ["metrics-exporter-wasm-core/utoipa-schema"]

[profile.release-with-debug]
inherits = "release"
debug = true
