[package]
name = "metrics-exporter-wasm-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
asn1rs.workspace = true
brotli = { version = "7.0.0", optional = true }
chrono = "0.4.40"
metrics.workspace = true
tracing.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys.workspace = true

[build-dependencies]
asn1rs.workspace = true

[features]
default = []
# Provide brotli support using the `brotli` crate.
compress-brotli = ["dep:brotli"]
# Provide zstd support, package [zstd-wasm](https://github.com/bokuweb/zstd-wasm).
compress-zstd-external = ["dep:wasm-bindgen-futures"]
# Rebuild zstd-wasm from source.
compress-zstd-external-from-source = []
asn-debug = ["asn1rs/descriptive-deserialize-errors", "asn1rs/debug-proc-macro"]
