[package]
name = "metrics-exporter-wasm-core"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
asn1rs.workspace = true
brotli = { version = "7.0.0", optional = true }
chrono.workspace = true
metrics.workspace = true
serde = { workspace = true, optional = true }
tracing.workspace = true
utoipa = { workspace = true, optional = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmtimer.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { workspace = true, features = ["now"] }

[build-dependencies]
asn1rs.workspace = true

[features]
default = []
# Provide brotli support using the `brotli` crate.
compress-brotli = ["dep:brotli"]
# Provide zstd support, package [zstd-wasm](https://github.com/bokuweb/zstd-wasm).
compress-zstd-external = ["dep:wasm-bindgen-futures"]
# Rebuild zstd-wasm from source.
compress-zstd-external-from-source = []
asn-debug = ["asn1rs/descriptive-deserialize-errors", "asn1rs/debug-proc-macro"]
serde = ["dep:serde", "chrono/serde"]
utoipa-schema = ["dep:utoipa"]
