[package]
name = "metrics-exporter-wasm-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for metrics-exporter-wasm. Provides types and deserializers for the receiving server."

[dependencies]
asn1rs.workspace = true
bytes.workspace = true
chrono.workspace = true
metrics.workspace = true
serde = { workspace = true, optional = true }
tracing.workspace = true
utoipa = { workspace = true, optional = true }
wasm-bindgen.workspace = true
web-sys.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmtimer.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { workspace = true, features = ["now"] }

[build-dependencies]
asn1rs.workspace = true

[features]
default = []
asn-debug = ["asn1rs/descriptive-deserialize-errors", "asn1rs/debug-proc-macro"]
serde = ["dep:serde", "chrono/serde"]
utoipa-schema = ["dep:utoipa"]
