[package]
name = "metrics-exporter-wasm-example"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
color-eyre = "0.6.3"
console_error_panic_hook = "0.1.7"
crossbeam-channel.workspace = true
eyre = "0.6.12"
gloo = "0.11.0"
metrics.workspace = true
metrics-exporter-wasm.path = "../.."
metrics-util = "0.17.0"
tracing = { version = "0.1.0", default-features = false, features = ["attributes"] }
tracing-subscriber = "0.3.18"
wasm-bindgen = { version = "0.2.100", default-features = false }
wasm-tracing = { git = "https://github.com/hypervideo/wasm-tracing", rev = "351a117449b51cdbf2b7c51386fe999a37a7efe7" }

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
