[package]
name = "standalone-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook.workspace = true
metrics.workspace = true
metrics-exporter-wasm.workspace = true
metrics-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wasm-bindgen.workspace = true
wasm-tracing.workspace = true

# to fix:
#   error: the wasm*-unknown-unknown targets are not supported by default, you may need to enable the "js" feature. For more information see: https://docs.rs/getrandom/#webassembly-support
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen-futures.workspace = true
tokio.workspace = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
