[package]
name = "server"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false
repository.workspace = true

[dependencies]
axum.workspace = true
axum-prometheus.workspace = true
color-eyre.workspace = true
eyre.workspace = true
futures.workspace = true
hyper.workspace = true
metrics.workspace = true
metrics-prometheus = "0.9.0"
prometheus = "0.13.4"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["time", "signal"] }
tower.workspace = true
tower-http.workspace = true
tower-http.features = ["decompression-full", "fs"]
tracing.workspace = true
tracing-subscriber = { features = ["env-filter"], workspace = true }
