[package]
name = "server"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false
repository.workspace = true

[dependencies]
axum.features = ["macros"]
axum.workspace = true
axum-prometheus.workspace = true
color-eyre.workspace = true
eyre.workspace = true
futures.workspace = true
hyper.workspace = true
metrics.workspace = true
metrics-exporter-wasm-core.workspace = true
metrics-prometheus = "0.9.0"
prometheus = "0.13.4"
tokio = { workspace = true, features = ["time", "signal", "macros"] }
tower.workspace = true
tower-http = { workspace = true, features = ["fs", "decompression-br"] }
tracing.workspace = true
tracing-subscriber = { features = ["env-filter"], workspace = true }
