[package]
name = "server"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-prometheus = "0.8.0"
color-eyre = "0.6.3"
eyre = "0.6.12"
futures = "0.3.31"
hyper = "1.6.0"
metrics = { version = "0.24.1" }
metrics-exporter-wasm-core = { path = "../../../core" }
metrics-prometheus = "0.10.0"
prometheus = "0.14.0"
tokio = { version = "1.43.0", features = ["time", "signal", "macros"] }
tower.version = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "decompression-br", "decompression-zstd"] }
tracing.version = "0.1.0"
tracing-subscriber = { features = ["env-filter"], version = "0.3.18" }
